php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #41693 scandir('') throws weird warning
Submitted: 2007-06-14 20:00 UTC Modified: 2007-06-14 23:28 UTC
From: nlopess@php.net Assigned:
Status: Closed Package: Directory function related
PHP Version: 5CVS-2007-06-14 (CVS) OS: linux
Private report: No CVE-ID: None
 [2007-06-14 20:00 UTC] nlopess@php.net
Description:
------------
print_r(scandir('')) throws the following:
Warning: scandir(): (errno 0): Success in ...

I didn't check the code for the cause.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-06-14 23:28 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 01 18:00:01 2026 UTC