Fixed bug #41693 (scandir() allows empty directory names).